--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body {
     background-color: #f9f9f9;
 }
 header {
-    background: #0078f0;
+    background: #80669d; /* original: #0078f0 */
     color: #fff;
     padding: 20px 0;
     text-align: center;
@@ -138,7 +138,7 @@ header p {
 
 /* Button styles */
 .popup-content button {
-    background-color: #106813;
+    background-color:#A10500;/* original: #106813 */
     border: none;
     color: white;
     padding: 15px 25px; /* Increase padding for larger size */
@@ -151,7 +151,7 @@ header p {
 
 /* Button hover effect */
 .popup-content button:hover {
-    background-color: #45a049; /* Lighter green on hover */
+    background-color: #ED0800; /* Original Lighter green on hover #45a049 */
 }
 
 /* Close button styles */
